--- a/Korbit/Korbit.csproj
+++ b/Korbit/Korbit.csproj
@@ -47,11 +47,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\ticker\Detailed.cs" />
     <Compile Include="API\user\Balances.cs" />
     <Compile Include="API\oauth2\AccessToken.cs" />
     <Compile Include="API\APIBase.cs" />
+    <Compile Include="Model\OrderBook.cs" />
+    <Compile Include="Model\TradeShopDetailAll.cs" />
+    <Compile Include="Model\TradeShopDetail.cs" />
     <Compile Include="ECurrencyPair.cs" />
     <Compile Include="KorbitClient.cs" />
+    <Compile Include="Model\Balance.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ReflectionUtility.cs" />
