--- a/SampleProgram/SampleProgram.csproj
+++ b/SampleProgram/SampleProgram.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{05B1B1F5-B9AC-463B-A401-53A71B5A1DC7}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>Korbit</RootNamespace>
-    <AssemblyName>Korbit</AssemblyName>
+    <ProjectGuid>{483D01F1-A00A-4FD4-BBAB-69B0CA946853}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>SampleProgram</RootNamespace>
+    <AssemblyName>SampleProgram</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -33,13 +33,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -50,26 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="API\ticker\Detailed.cs" />
-    <Compile Include="API\user\Balances.cs" />
-    <Compile Include="API\oauth2\AccessToken.cs" />
-    <Compile Include="API\APIBase.cs" />
-    <Compile Include="Model\AccessToken.cs" />
-    <Compile Include="Model\OrderBook.cs" />
-    <Compile Include="Model\TradeShopDetailAll.cs" />
-    <Compile Include="Model\TradeShopDetail.cs" />
-    <Compile Include="Model\ECurrencyPair.cs" />
-    <Compile Include="KorbitClient.cs" />
-    <Compile Include="Model\Balance.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\ReflectionUtility.cs" />
-    <Compile Include="Web\Requester.cs" />
-    <Compile Include="Web\WebSocketClient.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Korbit\Korbit.csproj">
+      <Project>{05b1b1f5-b9ac-463b-a401-53a71b5a1dc7}</Project>
+      <Name>Korbit</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
